; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/aquantia/atlantic/extr_aq_hw_utils.c_aq_hw_read_reg_bit.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/aquantia/atlantic/extr_aq_hw_utils.c_aq_hw_read_reg_bit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.aq_hw_s = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @aq_hw_read_reg_bit(%struct.aq_hw_s* %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca %struct.aq_hw_s*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.aq_hw_s* %0, %struct.aq_hw_s** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %9 = load %struct.aq_hw_s*, %struct.aq_hw_s** %5, align 8
  %10 = load i32, i32* %6, align 4
  %11 = call i32 @aq_hw_read_reg(%struct.aq_hw_s* %9, i32 %10)
  %12 = load i32, i32* %7, align 4
  %13 = and i32 %11, %12
  %14 = load i32, i32* %8, align 4
  %15 = ashr i32 %13, %14
  ret i32 %15
}

declare dso_local i32 @aq_hw_read_reg(%struct.aq_hw_s*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
